--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
                             <h5 class="card-title text-center pb-0 fs-4">Login</h5>
                             <p class="text-center ">ACACYPAC - Portal Capacitaciones</p>
                         </div>
-                        <form class="row g-3 needs-validation" novalidate>
+                        <form class="row g-3 needs-validation" (submit)="login()" novalidate>
                             <div class="col-12">
                                 <label for="dui" class="form-label">DUI</label>
                                 <div class="input-group has-validation">
