--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -36,13 +36,8 @@
         </a>
         <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
             <li>
-                <a href="tables-general.html">
-                    <i class="bi bi-circle"></i><span>General Tables</span>
-                </a>
-            </li>
-            <li>
-                <a href="tables-data.html">
-                    <i class="bi bi-circle"></i><span>Data Tables</span>
+                <a routerLink="/dashboard/list-evaluation">
+                    <i class="bi bi-circle"></i><span>Listado de evaluaciones</span>
                 </a>
             </li>
         </ul>
@@ -54,7 +49,7 @@
         <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
             <li>
                 <a routerLink="/dashboard/list-collaborator">
-                    <i class="bi bi-circle"></i><span>Listado colaboradores</span>
+                    <i class="bi bi-circle"></i><span>Listado de colaboradores</span>
                 </a>
             </li>
         </ul>
