PORTAL: Vista de evaluaciones

--- a/src/app/pages/listevaluation/listevaluation.component.html
+++ b/src/app/pages/listevaluation/listevaluation.component.html
@@ -7,7 +7,7 @@
                       <h5 class="card-title">Listado de evaluaciones</h5>
                   </div>
                   <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
-                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ExtralargeModal">
+                      <button type="button" class="btn btn-primary" routerLink="/dashboard/evaluation">
                           <i class="bi bi-plus-lg"></i>Agregar evaluación
                       </button>
                   </div>
