--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Cargo</label>
-                                <select class="form-select" id="agencia" formControlName="cargo" >
+                                <select class="form-select" id="cargo" formControlName="cargo" >
                                     <option selected>Selecciona</option>
                                     <option value="1">One</option>
                                     <option value="2">Two</option>
