--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
             <img src="./assets/img/logo.png" alt="" height="60rem">
             <span class="d-none d-lg-block"> ACACYPAC</span>
         </a>
-        <i class="bi bi-list toggle-sidebar-btn"></i>
+        <!-- <i class="bi bi-list toggle-sidebar-btn"></i> -->
     </div>
 
     <nav class="header-nav ms-auto">
@@ -14,7 +14,7 @@
             <li class="nav-item dropdown pe-3">
                 <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                     <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2 spanText">Javier Beltrán</span>
+                    <span class="d-none d-md-block dropdown-toggle ps-2 spanText">Javier Beltrán <span>( 700 )</span></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                     <li class="dropdown-header">
