--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1086,10 +1086,15 @@ h1, h2, h3, h4, h5, h6 {
 # Footer
 --------------------------------------------------------------*/
 .footer {
+  /* position: fixed; */
+  /* bottom: 0; */
+  left: 30%;
   padding: 20px 0;
   font-size: 14px;
   transition: all 0.3s;
   border-top: 1px solid #cddfff;
+  clear: both;
+
 }
 .footer .copyright {
   text-align: center;
