PORTAL: Cambio de vista del colaborador

--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="ExtralargeModal" tabindex="-1">
+<!-- <div class="modal fade" id="ExtralargeModal" tabindex="-1">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
@@ -19,21 +19,21 @@
                         <div class="row">
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Número de documento</label>
-                                <input type="text" formControlName="dui" class="form-control" placeholder="Ingresa el dui">
+                                <input type="text" formControlName="dui" class="form-control" placeholder="Ingresa el dui" >
                                 <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
                                     El Dui es obligatorio
                                 </div>
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Nombres</label>
-                                <input type="text" formControlName="nombres" class="form-control" placeholder="Ingresa los nombres">
+                                <input type="text" formControlName="nombres" class="form-control" placeholder="Ingresa los nombres" >
                                 <div class="alert alert-danger mt-2" [hidden]="nombres.valid || nombres.pristine">
                                     Los nombres son obligatorios
                                 </div>
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">apellidos</label>
-                                <input type="text" formControlName="apellidos" class="form-control" placeholder="Ingresa los apellidos">
+                                <input type="text" formControlName="apellidos" class="form-control" placeholder="Ingresa los apellidos" >
                                 <div class="alert alert-danger mt-2" [hidden]="apellidos.valid || apellidos.pristine">
                                     Los apellidos son obligatorios
                                 </div>
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Departamento</label>
-                                <select class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()">
+                                <select class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()" >
                                     <option selected>SELECCIONA</option>
                                     <option *ngFor="let e of listaDepartamento" [value]=" e.id ">
                                         {{ e.nombre }}
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Cargo</label>
-                                <select class="form-select" id="cargo" formControlName="cargo">
+                                <select class="form-select" id="cargo" formControlName="cargo" >
                                     <option selected>SELECCIONA</option>
                                     <option *ngFor="let e of listaCargo" [value]=" e.id ">
                                         {{ e.nombre }}
@@ -76,14 +76,14 @@
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Teléfono</label>
-                                <input type="number" formControlName="telefono" class="form-control" placeholder="Ingresa el Telefono">
+                                <input type="number" formControlName="telefono" class="form-control" placeholder="Ingresa el Telefono" >
                                 <div class="alert alert-danger mt-2" [hidden]="telefono.valid || telefono.pristine">
                                     El Telefono es obligatorio
                                 </div>
                             </div>
                             <div class="col-md-4 mb-2">
                                 <label class="form-label">Email</label>
-                                <input type="email" formControlName="email" class="form-control" placeholder="Ingresa el email">
+                                <input type="email" formControlName="email" class="form-control" placeholder="Ingresa el email" >
                                 <div class="alert alert-danger mt-2" [hidden]="email.valid || email.pristine">
                                 <span *ngIf="email.errors?.['required']">
                                     El email es obligatorio
@@ -107,7 +107,117 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- End Extra Large Modal-->
 
 <!-- [disabled]="formUser.invalid" -->
+
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <form [formGroup]="formUser" class="row g-3" (ngSubmit)="guardar()">
+                        <div class="col-md-3">
+                            <div class="wrapper">
+                                <input type="file" name="image1" id="image1" formControlName="foto" accept=".gif, .jpg, .png" hidden="hidden"/>
+                                <label for="image1">
+                                    <img src="../../../assets/img/avatar.jpg" class="img-fluid rounded-start" alt="..."/>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="row">
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Número de documento</label>
+                                    <input type="text" formControlName="dui" class="form-control" placeholder="Ingresa el dui" >
+                                    <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
+                                        El Dui es obligatorio
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Nombres</label>
+                                    <input type="text" formControlName="nombres" class="form-control" placeholder="Ingresa los nombres" >
+                                    <div class="alert alert-danger mt-2" [hidden]="nombres.valid || nombres.pristine">
+                                        Los nombres son obligatorios
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">apellidos</label>
+                                    <input type="text" formControlName="apellidos" class="form-control" placeholder="Ingresa los apellidos" >
+                                    <div class="alert alert-danger mt-2" [hidden]="apellidos.valid || apellidos.pristine">
+                                        Los apellidos son obligatorios
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Agencia</label>
+                                    <select  class="form-select" id="agencia" formControlName="agencia" >
+                                        <option selected>SELECCIONA</option>
+                                        <option *ngFor="let e of listaAgencia" [value]=" e.id " >
+                                            {{ e.nombre }}
+                                        </option>
+                                    </select>
+                                    <div class="alert alert-danger mt-2" [hidden]="agencia.valid || agencia.pristine">
+                                        Debes seleccionar una agencia
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Departamento</label>
+                                    <select class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()" >
+                                        <option selected>SELECCIONA</option>
+                                        <option *ngFor="let e of listaDepartamento" [value]=" e.id ">
+                                            {{ e.nombre }}
+                                        </option>
+                                    </select>
+                                    <div class="alert alert-danger mt-2" [hidden]="departamento.valid || departamento.pristine">
+                                        Debes seleccionar un departamento
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Cargo</label>
+                                    <select class="form-select" id="cargo" formControlName="cargo" >
+                                        <option selected>SELECCIONA</option>
+                                        <option *ngFor="let e of listaCargo" [value]=" e.id ">
+                                            {{ e.nombre }}
+                                        </option>
+                                    </select>
+                                    <div class="alert alert-danger mt-2" [hidden]="cargo.valid || cargo.pristine">
+                                        Debes seleccionar un cargo
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Teléfono</label>
+                                    <input type="number" formControlName="telefono" class="form-control" placeholder="Ingresa el Telefono" >
+                                    <div class="alert alert-danger mt-2" [hidden]="telefono.valid || telefono.pristine">
+                                        El Telefono es obligatorio
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-2">
+                                    <label class="form-label">Email</label>
+                                    <input type="email" formControlName="email" class="form-control" placeholder="Ingresa el email" >
+                                    <div class="alert alert-danger mt-2" [hidden]="email.valid || email.pristine">
+                                    <span *ngIf="email.errors?.['required']">
+                                        El email es obligatorio
+                                    </span>
+                                    <span *ngIf="email.errors?.['email']">
+                                        El email debe de ser valido
+                                    </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                Cerrar
+                            </button>
+                            <button type="submit" class="btn btn-primary">
+                                Guardar
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
