--- a/src/app/pages/listCollaborator/listcollaborator.component.html
+++ b/src/app/pages/listCollaborator/listcollaborator.component.html
@@ -7,15 +7,16 @@
                         <h5 class="card-title">Listado de colaboradores</h5>
                     </div>
                     <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ExtralargeModal">
+                        <button type="button" class="btn btn-primary" routerLink="/dashboard/collaborator">
                             <i class="bi bi-plus-lg"></i>Agregar colaborador
                         </button>
                     </div>
                 </div>
                 <app-datatable></app-datatable>
-
             </div>
         </div>
     </div>
 </div>
-<app-collaborator></app-collaborator>
+<!-- <app-collaborator></app-collaborator> -->
+
+<!-- data-bs-toggle="modal" data-bs-target="#ExtralargeModal" -->
