--- a/src/app/pages/datatable/datatable.component.html
+++ b/src/app/pages/datatable/datatable.component.html
@@ -13,18 +13,18 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of listaColaborador" (click)="selectedRow = item">
-                <td></td>
+            <tr *ngFor="let item of listaColaborador">
+                <td>{{ item.id }}</td>
                 <td>{{ item.agencia }}</td>
                 <td>{{ item.departamento }}</td>
-                <td>{{ item.nombre }} {{item.apellido}}</td>
+                <td>{{ item.nombres }} {{item.apellidos}}</td>
                 <td>{{ item.cargo }}</td>
                 <td>{{ item.utlimoIngreso }}</td>
                <td style="text-align: center;">
-                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" (click)="colaborador.mostrar(selectedRow)">
+                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
                         <i class="bi bi-pencil-square"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar">
+                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)">
                         <i class="bi bi-trash"></i>
                     </a>
                 </td>
