--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -5,43 +5,43 @@
             <div class="card-body">
                 <div class="row">
                     <h1 class="card-title text-center titulo" id="title">Guardar colaborador</h1>
-                    <form [formGroup]="formUser" class="row g-3 body" (ngSubmit)="guardar()">
-                        <div class="col-md-3">
+                    <form [formGroup]="formUser" class="row g-3 " (ngSubmit)="guardar()">
+                        <div class="col-md-2">
                             <div class="wrapper">
-                                <input type="file" name="image1" id="image1" formControlName="foto" accept=".gif, .jpg, .png" hidden="hidden"/>
-                                <label for="image1">
-                                    <img src="../../../assets/img/avatar.jpg" class="img-fluid rounded-start" alt="..."/>
+                                <input type="file" name="foto" id="foto"  accept=".gif, .jpg, .png" hidden="hidden" (change)="changeFoto()"  />
+                                <label for="foto">
+                                    <img src="../../../assets/img/avatar.jpg" id="img" formControlName="foto" class="img-fluid rounded-start" alt="..." />
                                 </label>
                             </div>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-10">
                             <div class="row">
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Número de documento</label>
-                                    <input type="text" formControlName="dui" class="form-control" placeholder="Ingresa el dui" >
+                                    <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" >
                                     <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
                                         El Dui es obligatorio
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Nombres</label>
-                                    <input type="text" formControlName="nombres" class="form-control" placeholder="Ingresa los nombres" >
+                                    <input type="text" formControlName="nombres" id="nombres" class="form-control" placeholder="Ingresa los nombres" >
                                     <div class="alert alert-danger mt-2" [hidden]="nombres.valid || nombres.pristine">
                                         Los nombres son obligatorios
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-2">
-                                    <label class="form-label">apellidos</label>
-                                    <input type="text" formControlName="apellidos" class="form-control" placeholder="Ingresa los apellidos" >
+                                    <label class="form-label">Apellidos</label>
+                                    <input type="text" formControlName="apellidos" id="apellidos" class="form-control" placeholder="Ingresa los apellidos" >
                                     <div class="alert alert-danger mt-2" [hidden]="apellidos.valid || apellidos.pristine">
                                         Los apellidos son obligatorios
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Agencia</label>
-                                    <select  class="form-select" id="agencia" formControlName="agencia" >
-                                        <option value="" disabled selected>Selecciona</option>
-                                        <option *ngFor="let e of listaAgencia " [value]="e.id" >
+                                    <select [(ngModel)]='ngSelectA'  class="form-select" id="agencia" formControlName="agencia" >
+                                        <option value="0" disabled selected>Selecciona</option>
+                                        <option *ngFor="let e of listaAgencia;" [value]="e.id">
                                             {{ e.nombre }}
                                         </option>
                                     </select>
@@ -51,9 +51,9 @@
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Departamento</label>
-                                    <select class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()" >
-                                        <option value="" disabled selected>Selecciona</option>
-                                        <option *ngFor="let e of listaDepartamento" [value]="e.id" >
+                                    <select [(ngModel)]='ngSelectD' class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()">
+                                        <option value="0" disabled selected>Selecciona</option>
+                                        <option *ngFor="let e of listaDepartamento" [value]="e.id">
                                             {{ e.nombre }}
                                         </option>
                                     </select>
@@ -63,8 +63,8 @@
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Cargo</label>
-                                    <select class="form-select" id="cargo" formControlName="cargo" >
-                                        <option value="" disabled selected>Selecciona</option>
+                                    <select [(ngModel)]='ngSelectC' class="form-select" id="cargo" formControlName="cargo" >
+                                        <option value="0" disabled selected>Selecciona</option>
                                         <option *ngFor="let e of listaCargo" [value]=" e.id ">
                                             {{ e.nombre }}
                                         </option>
@@ -75,19 +75,19 @@
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Teléfono</label>
-                                    <input type="number" formControlName="telefono" class="form-control" placeholder="Ingresa el Telefono" >
+                                    <input type="number" formControlName="telefono" id="telefono" class="form-control" placeholder="Ingresa el Telefono" >
                                     <div class="alert alert-danger mt-2" [hidden]="telefono.valid || telefono.pristine">
                                         El Telefono es obligatorio
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Email</label>
-                                    <input type="correo" formControlName="correo" class="form-control" placeholder="Ingresa el email" >
+                                    <input type="correo" formControlName="correo" id="correo" class="form-control" placeholder="Ingresa el email" >
                                     <div class="alert alert-danger mt-2" [hidden]="correo.valid || correo.pristine">
                                     <span *ngIf="correo.errors?.['required']">
                                         El email es obligatorio
                                     </span>
-                                    <span *ngIf="correo.errors?.['emcorreoacorreoil']">
+                                    <span *ngIf="correo.errors?.['email']">
                                         El email debe de ser valido
                                     </span>
                                     </div>
@@ -95,13 +95,13 @@
                             </div>
                         </div>
                         <div class="modal-footer footer">
-                            <button type="button" class="btn btn-secondary">
+                            <button type="button" class="btn btn-secondary" (click)="cancelar();">
                                 Cancelar
                             </button>
-                            <button type="submit" class="btn btn-primary" id="btnGuardar">
+                            <button type="submit" class="btn btn-primary" id="btnGuardar" [disabled]="!formUser.valid">
                                 Guardar
                             </button>
-                            <button type="button" class="btn btn-primary" id="btnActualizar" (click)="editar()">
+                            <button type="button" class="btn btn-primary" id="btnActualizar" (click)="editar();" [disabled]="!formUser.valid">
                                 Actualizar
                             </button>
                         </div>
