--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,22 +21,25 @@
                                 (ngSubmit)="login()"
                                 id="loginForm"
                                 novalidate>
+                            <div class="container_img">
+                                <img src="../../../assets/img/logo.png" alt="" style="width: auto;">
+                            </div>
                             <div class="col-12">
                                 <label for="dui" class="form-label">DUI</label>
                                 <div class="form-group has-validation">
-                                    <input type="text" name="username" formControlName="dui" class="form-control" id="dui" >
+                                    <input type="text" name="username" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa tú dui">
                                     <div class="invalid-feedback">Ingresa tu número de documento</div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <label for="clave" class="form-label">Clave</label>
                                 <div class="form-group has-validation">
-                                    <input type="password" name="clave" formControlName="clave" class="form-control" id="clave" >
+                                    <input type="password" name="clave" formControlName="clave" class="form-control" id="clave" placeholder="Ingresa tú clave">
                                     <div class="invalid-feedback">Ingresa la clave!</div>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-success w-100" type="submit">Login</button>
+                                <button class="btn btn-success w-100" type="submit" id="login">Login</button>
                             </div>
                         </form>
                     </div>
