--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -8,9 +8,9 @@
                     <form [formGroup]="formUser" class="row g-3 " (ngSubmit)="guardar()">
                         <div class="col-md-2">
                             <div class="wrapper">
-                                <input type="file" name="foto" id="foto"  accept=".gif, .jpg, .png" hidden="hidden" (change)="changeFoto($event)"  />
+                                <input type="file" name="foto" id="foto" accept=".gif, .jpg, .png" hidden="hidden" (change)="changeFoto($event)"  />
                                 <label for="foto">
-                                    <img src="../../../assets/img/avatar.jpg" id="img" formControlName="foto" class="img-fluid rounded-start" alt="..." />
+                                    <img src="../../../assets/img/avatar.jpg" id="img" class="img-fluid rounded-start" alt="..." />
                                 </label>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Agencia</label>
-                                    <select [(ngModel)]='ngSelectA'  class="form-select" id="agencia" formControlName="agencia" >
+                                    <select [(ngModel)]='ngSelectA'  class="form-select" id="agencia" formControlName="agencia" (change)="handleChangeAgencia()">
                                         <option value="0" disabled selected>Selecciona</option>
                                         <option *ngFor="let e of listaAgencia;" [value]="e.id">
                                             {{ e.nombre }}
