--- a/src/app/pages/collaborator/collaborator.component.html
+++ b/src/app/pages/collaborator/collaborator.component.html
@@ -18,10 +18,11 @@
                             <div class="row">
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Número de documento</label>
-                                    <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" >
+                                    <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" (keypress)="validateFormat($event)"  maxlength="10">
                                     <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
                                         El Dui es obligatorio
                                     </div>
+                                    
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Nombres</label>
@@ -75,7 +76,7 @@
                                 </div>
                                 <div class="col-md-4 mb-2">
                                     <label class="form-label">Teléfono</label>
-                                    <input type="number" formControlName="telefono" id="telefono" class="form-control" placeholder="Ingresa el Telefono" >
+                                    <input type="text" formControlName="telefono" id="telefono" class="form-control" placeholder="Ingresa el Telefono" (keypress)="validateFormatTel($event)" maxlength="9">
                                     <div class="alert alert-danger mt-2" [hidden]="telefono.valid || telefono.pristine">
                                         El Telefono es obligatorio
                                     </div>
