--- a/src/app/pages/datatable/datatable.component.html
+++ b/src/app/pages/datatable/datatable.component.html
@@ -27,7 +27,7 @@
                     <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarColaborador(item.id)">
                         <i class="bi bi-trash"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)">
+                    <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.intentos == 0">
                       <i class="bi bi-lock-fill"></i>
                     </a>
                 </td>
