--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -52,7 +52,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" routerLink="/login">
+                        <a class="dropdown-item d-flex align-items-center"  (click)="logout()">
                         <i class="bi bi-box-arrow-right"></i>
                         <span>Sign Out</span>
                         </a>
