--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,7 +27,7 @@
                             <div class="col-12">
                                 <label for="dui" class="form-label">DUI</label>
                                 <div class="form-group has-validation">
-                                    <input type="text" name="username" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa tú dui">
+                                    <input type="text" name="username" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa tú dui" (keypress)="validateFormat($event)" maxlength="10">
                                     <div class="invalid-feedback">Ingresa tu número de documento</div>
                                 </div>
                             </div>
