--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -32,7 +32,7 @@
     }
 }
 
-.background-radial-gradient {
+  /* .background-radial-gradient {
     background-color: hsl(218, 41%, 15%);
     background-image: radial-gradient(650px circle at 0% 0%,
         hsl(218, 41%, 35%) 15%,
@@ -46,13 +46,28 @@
         hsl(218, 41%, 20%) 75%,
         hsl(218, 41%, 19%) 80%,
         transparent 100%);
+  } */
+  .background-radial-gradient {
+    background-color: hsl(176, 89%, 18%);
+    background-image: radial-gradient(650px circle at 0% 0%,
+      hsl(173, 77%, 24%) 15%,
+      hsl(178, 71%, 24%) 35%,
+      hsl(176, 70%, 18%) 75%,
+      hsl(170, 78%, 16%) 80%,
+        transparent 100%),
+      radial-gradient(1250px circle at 100% 100%,
+        hsl(173, 77%, 24%) 15%,
+        hsl(178, 71%, 24%) 35%,
+        hsl(176, 70%, 18%) 75%,
+        hsl(170, 78%, 16%) 80%,
+        transparent 100%);
   }
   #radius-shape-1 {
     height: 220px;
     width: 220px;
     top: -60px;
     left: -130px;
-    background: radial-gradient(#44006b, #ad1fff);
+    background: radial-gradient(#043336, #178A92);
     overflow: hidden;
   }
 
@@ -62,7 +77,7 @@
     right: -110px;
     width: 300px;
     height: 300px;
-    background: radial-gradient(#44006b, #ad1fff);
+    background: radial-gradient(#043336, #178A92);
     overflow: hidden;
   }
 
@@ -82,4 +97,9 @@
     .cascading-right {
       margin-right: 0;
     }
+  }
+
+  .card {
+    width: 75%;
+    height: 20%;
   }
