--- a/src/app/auth/resetclave/resetclave.component.html
+++ b/src/app/auth/resetclave/resetclave.component.html
@@ -1,30 +1,40 @@
-<div class="container d-flex flex-column">
-    <div class="row align-items-center justify-content-center min-vh-100">
-        <div class="col-12 col-md-8 col-lg-4">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <div class="mb-4">
-                        <h5 class="mt-2">Olvidaste la contraseña?</h5>
-                        <!-- <p class="mb-2">
-                            Enter your registered email ID to reset the password
-                        </p> -->
+
+<main>
+    <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4 background-radial-gradient">
+        <div class="container-fluid h-custom">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-md-9 col-lg-6 col-xl-5">
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid" alt="Login">
+                </div>
+                <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 position-relative">
+                    <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+                    <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+                    <div class="card mb-3 cascading-right">
+                        <div class="card-body">
+                            <div class="pt-4 pb-2">
+                                <h4 class="text-center ">Reestablecer la contraseña</h4>
+                            </div>
+                            <form>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Coreo electrónico</label>
+                                    <input type="email" id="email" class="form-control" name="email" placeholder="Ingresa tu correo electrónico" required=""/>
+                                </div>
+                                <div class="mb-3 d-grid">
+                                    <button type="button" class="btn btn-success" (click)="reestablecerClave()">
+                                        Reestablecer contraseña
+                                    </button>
+                                </div>
+                                <span>No tienes una cuenta?
+                                    <a routerLink="/login">Iniciar sesión</a>
+                                </span>
+                            </form>
+                        </div>
                     </div>
-                    <form>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Coreo electrónico</label>
-                            <input type="email" id="email" class="form-control" name="email" placeholder="Ingresa tu correo electrónico" required=""/>
-                        </div>
-                        <div class="mb-3 d-grid">
-                            <button type="submit" class="btn btn-success">
-                                Reestablecer contraseña
-                            </button>
-                        </div>
-                        <span>No tienes una cuenta?
-                            <a routerLink="/login">Iniciar sesión</a>
-                        </span>
-                    </form>
+                    <div class="credits">
+                        Designed by <a href="#">Equipo TI</a> {{ year }}
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </section>
+</main>
