PORTAL: Login mejorado

--- a/src/app/auth/resetclave/resetclave.component.html
+++ b/src/app/auth/resetclave/resetclave.component.html
@@ -1,5 +1,5 @@
 
-<main>
+<!-- <main>
     <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4 background-radial-gradient">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -37,4 +37,39 @@
             </div>
         </div>
     </section>
-</main>
+</main> -->
+
+<section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4 background-radial-gradient overflow-hidden">
+  <div class="container-fluid h-custom ">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-md-9 col-lg-6 col-xl-5">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid imagen" alt="Login">
+          </div>
+          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 position-relative">
+            <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+            <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+              <div class="wrapper bg-glass">
+                <div class="container_img">
+                  <img src="../../../assets/img/logo.png" alt="" >
+                </div>
+                <div class="text-center mt-4 name">
+                  Reestablecer la contraseña
+                </div>
+                <form class="p-3 mt-3 needs-validation" id="reset" novalidate>
+                    <div class="form-group has-validation form-field d-flex align-items-center">
+                        <span class="fas fa-key"></span>
+                        <input type="email" name="email" formControlName="email" id="email" class="form-control" placeholder="Ingresa tu email" maxlength="50" required>
+                        <div class="invalid-feedback">Ingresa el correo electronico</div>
+                    </div>
+                    <button class="btn mt-3" type="submit" id="login">Reestablecer contraseña</button>
+                </form>
+                <div class="text-center fs-6 claveOlvidada">
+                    <span>No tienes una cuenta?
+                      <a routerLink="/login">Iniciar sesión</a>
+                  </span>
+                </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
